@@ -113,14 +113,6 @@ will be used, and CFLAGS sets optimization options for the compiler.
      Don't build libraries with profiling information.  You may want to
      use this option if you don't plan to do profiling.
 
-`--enable-omitfp'
-     Use maximum optimization for the normal (static and shared)
-     libraries, and compile separate static libraries with debugging
-     information and no optimization.  We recommend not doing this.
-     The extra optimization doesn't gain you much, it may provoke
-     compiler bugs, and you won't be able to trace bugs through the C
-     library.
-
 `--disable-versioning'
      Don't compile the shared libraries with symbol version information.
      Doing this will make the resulting library incompatible with old
@@ -204,9 +196,9 @@ cross-compiler for the target you configured the library for; it is
 important to use this same `CC' value when running `configure', like
 this: `CC=TARGET-gcc configure TARGET'.  Set `BUILD_CC' to the compiler
 to use for programs run on the build system as part of compiling the
-library.  You may need to set `AR' and `RANLIB' to cross-compiling
-versions of `ar' and `ranlib' if the native tools are not configured to
-work with object files for the target you configured for.
+library.  You may need to set `AR' to cross-compiling versions of `ar'
+if the native tools are not configured to work with object files for
+the target you configured for.
 
 Installing the C Library
 ========================
@@ -317,12 +309,11 @@ build the GNU C library:
      Check the FAQ for any special compiler issues on particular
      platforms.
 
-   * GNU `binutils'
+   * GNU `binutils' 2.15 or later
 
      You must use GNU `binutils' (as and ld) to build the GNU C library.
      No other assembler or linker has the necessary functionality at the
-     moment.  The configure scripts checks for the appropriate version
-     for the platform.  Too-old versions will prevent building glibc.
+     moment.
 
    * GNU `texinfo' 3.12f
 
@@ -461,3 +452,4 @@ or the manual has a bug, so report the disagreement.  If you find any
 errors or omissions in this manual, please report them to the bug
 database.  If you refer to specific sections of the manual, please
 include the section names for easier identification.
+
