@@ -9,7 +9,7 @@ Version 2.16
 
 * The following bugs are resolved with this release:
 
-  13526, 13527, 13528, 13529, 13531, 13532, 13533, 13547, 13555
+  13526, 13527, 13528, 13529, 13531, 13532, 13533, 13547, 13552, 13555
 
 * ISO C11 support:
 
